cmake_minimum_required(VERSION 3.4)
project(solver)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(/home/lol/formatter_ex_lib formatter_ex_lib_dir)
add_subdirectory(/home/lol/solver_lib solver_lib_dir)
add_executable(solver /home/lol/solver_application/equation.cpp)
target_include_directories(formatter_ex_lib PUBLIC /home/lol/formatter_ex_lib /home/lol/solver_lib)
target_link_libraries(solver formatter_ex_lib solver_lib)
